# lesenok_kanban_ncurses

./: Makefile.am  README.am  README.md  base_structures.h  config.h  configure.ac  logic_base_struct
src/: Makefile.am  base_structures.h  client.cpp  client_connection.cpp  client_connection.hpp  cur.cpp  main_server.cpp  parser.cpp  parser.hpp  server.cpp  server.hpp  session.cpp  session.hpp
